--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,6 @@ body {
   width: 1920px;
   height: 1080px;
   background: #5d5d5d;
-  opacity: 1;
   z-index: -100000;
 }
 
@@ -116,28 +115,20 @@ body {
   font-family: Rubik, sans-serif;
   position: absolute;
   top: 0;
-  height: 156px;
+  height: 172px;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  opacity: 0;
+  opacity: 1;
   transition: all 0.5s ease-in;
   /*background: linear-gradient(90deg, rgba(255, 255, 255, 0), #000000, rgba(255, 255, 255, 0));*/
 }
 
-.LogoSpot {
-  top: 5px;
-  justify-content: center;
-  padding: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
+.imageContainer {
   position: relative;
-  width: 789px;
-  height: 993px;
-  background: url("../public/images/Logo.png") no-repeat;
-  left: 29%;
-  transform: scale(0.15);
+  right: 0;
+  width: 20%;
 }
 
 .Logo
@@ -160,27 +151,16 @@ body {
   justify-content: flex-end;
 }
 
-.imageContainer1 {
-  position: relative;
-  transform: skewY(4.5deg);
-  rotate: -4.5deg;
-  right: 0;
-}
-
 .Player1Image {
-  width: auto;
+  width: 118px;
   height: 118px;
-  /*   box-shadow: 0px 1px 6px 1px rgb(0 0 0 / 50%); */
-  /*   background: linear-gradient(180deg, #2f58c0, #4d90d3) border-box; */
-  border: 3px solid transparent;
-  border-radius: 15px;
-  margin-right: 8px;
-  margin-top: 3px;
+  border-radius: 12px;
+  margin: 0px 34px 0px 34px;
 }
 
 .Player1Name {
   position: absolute;
-  bottom: -10px;
+  bottom: -100px;
   text-align: right;
   right: 155px;
   color: white;
@@ -191,30 +171,6 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 16ch;
-}
-
-#Player1SkipBase{
-  position: absolute;
-  top: 79px;
-  right: 244px;
-  width: 49px;
-  height: 47px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: url("../public/images/skillreplay/L_NoSkip.svg");
-}
-
-#Player1ReplayBase{
-  position: absolute;
-  top: 79px;
-  right: 300px;
-  width: 49px;
-  height: 47px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: url("../public/images/skillreplay/L_NoReplay.svg");
 }
 
 #ScoresLeft {
@@ -244,33 +200,8 @@ body {
   transition: all 0.5s ease-in-out;
 }
 
-.Player1ReplayBase {
-  padding-left: 5px;
-  padding-right: 5px;
-  background: transparent;
-  color: white;
-  text-transform: uppercase;
-  font-size: 32px;
-  font-weight: bolder;
-  text-align: center;
-  transition: all 0.5s ease-in-out;
-  z-index: 4;
-}
-
-.Player1ReplayText {
-  text-align: center;
-  color: white;
-  opacity: 1;
-  border-bottom-left-radius: 8px;
-  background-color: rgb(22, 23, 36);
-  font-size: 16px;
-  padding: 0px 8px;
-  width: auto;
-  transition: all 0.5s ease-in-out;
-}
-
 .Player1Goal {
-  opacity: 0;
+  opacity: 1;
   padding-left: 13px;
   padding-right: 13px;
   background: #4D5386;
@@ -292,33 +223,8 @@ body {
   justify-content: flex-start;
 }
 
-.Player2ReplayBase {
-  padding-left: 5px;
-  padding-right: 5px;
-  background: transparent;
-  color: white;
-  text-transform: uppercase;
-  font-size: 32px;
-  font-weight: bolder;
-  text-align: center;
-  transition: all 0.5s ease-in-out;
-  z-index: 4;
-}
-
-.Player2ReplayText {
-  text-align: center;
-  color: white;
-  opacity: 1;
-  border-bottom-right-radius: 8px;
-  background-color: rgb(22, 23, 36);
-  font-size: 16px;
-  padding: 0px 6px 0px 8px;
-  width: auto;
-  transition: all 0.5s ease-in-out;
-}
-
 .Player2Goal {
-  opacity: 0;
+  opacity: 1;
   padding-left: 13px;
   padding-right: 13px;
   background: #4D5386;
@@ -360,33 +266,9 @@ body {
   transition: all 0.5s ease-in-out;
 }
 
-#Player2SkipBase{
-  position: absolute;
-  top: 76px;
-  left: 242px;
-  width: 49px;
-  height: 47px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: url("../public/images/skillreplay/R_NoSkip.svg");
-}
-
-#Player2ReplayBase{
-  position: absolute;
-  top: 76px;
-  left: 296px;
-  width: 49px;
-  height: 47px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: url("../public/images/skillreplay/R_NoReplay.svg");
-}
-
 .Player2Name {
   position: absolute;
-  bottom: -10px;
+  bottom: -100px !important; 
   text-align: right;
   left: 149px;
   color: white;
@@ -399,31 +281,10 @@ body {
   max-width: 16ch;
 }
 
-.imageContainer2 {
-  position: relative;
-  transform: skewY(-4.5deg);
-  rotate: 4.5deg;
-  left: -1px;
-}
-
 .Player2Image {
-  width: auto;
-  height: 120px;
-  box-shadow: 0px 1px 6px 1px rgb(0 0 0 / 50%);
-  /*   background: linear-gradient(165deg, #dc6153, #fc8e7f) border-box;
-    border: 3px solid transparent; */
-  border-radius: 15px;
-  margin-left: 8px;
-  margin-top: 3px;
-}
-
-/* Dividing line */
-.divLine {
-  position: absolute;
-  top: 166px;
-  width: 100%;
-  height: 8px;
-  background: linear-gradient(90deg, #f6d16a 50%, #d91e36 50%);
+  width: 118px;
+  height: 118px;
+  border-radius: 12px;
 }
 
 .buttonsChooseMatch {
@@ -496,19 +357,23 @@ body {
 /* Score Bounds | FC, Combo, ACC */
 
 .PlayerBounds {
-  width: 1920px;
-  height: 1080px;
-  opacity: 0;
+  width: 1050px;
+  height: 172px;
+  max-height: 172px;
+  opacity: 1;
   display: flex;
+  flex-shrink: 1;
   justify-content: center;
-  margin-top: 940px;
+  align-items: center;
+  align-self: center;
   gap: 43px;
 }
 
 .Player1Class {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
+  align-self: center;
   color: white;
   width: 200px;
 }
@@ -539,7 +404,8 @@ body {
 .Player2Class {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center; 
+  align-self: center;
   color: white;
   width: 200px;
 }
@@ -571,7 +437,7 @@ body {
 
 .TugOfWar {
   display: flex;
-  opacity: 0;
+  opacity: 1;
   position: absolute;
   bottom: 176px;
 }
@@ -585,7 +451,7 @@ body {
 .LeftTugInner {
   width: 0px;
   height: 10px;
-  background-image: linear-gradient(90deg, rgb(248, 243, 107), rgba(223.12, 132.95, 132.95, 1));
+  background-image: linear-gradient(90deg, rgb(229, 0, 60), rgb(229, 0 ,60));
 }
 
 .RightTugOuter {
@@ -597,12 +463,12 @@ body {
 .RightTugInner {
   width: 0px;
   height: 10px;
-  background-image: linear-gradient(-90deg, rgb(219, 30, 54), rgb(219, 30, 54));
+  background-image: linear-gradient(-90deg, rgb(0, 83, 224), rgb(0, 83, 224));
 }
 
 /* Song Card */
 
-#Song {
+#PlayerScores {
   position: absolute;
   height: 17%;
   width: 100%;
@@ -616,7 +482,7 @@ body {
   max-height: 150px;
   max-width: 550px;
   opacity: 1;
-  position: absolute;
+  display: flex;
   bottom: 20px;
   right: 103px;
 }
@@ -712,7 +578,7 @@ body {
   position: absolute;
   top: 40%;
   left: 0;
-  opacity: 0.5;
+  opacity: 1.5;
   z-index: 100;
   color:black;
   font-size: 300px;
