--- a/src/App.css
+++ b/src/App.css
@@ -125,33 +125,6 @@ body {
   margin: 0px 34px 0px 34px;
 }
 
-.Player1Name {
-  position: absolute;
-  bottom: -100px;
-  text-align: right;
-  right: 155px;
-  color: white;
-  text-transform: capitalize;
-  font-size: 64px;
-  z-index: 5;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 16ch;
-}
-
-.Player1Score {
-  width: 11px;
-  height: 42px;
-  background: transparent;
-  text-align: center;
-  transform: skewY(4.5deg);
-  rotate: -4.5deg;
-  border-radius: 3px;
-  z-index: 5;
-  border: 1px solid #f6d16a;
-  transition: all 0.5s ease-in-out;
-}
 
 .Player1Goal {
   opacity: 1;
@@ -169,13 +142,6 @@ body {
   white-space: nowrap;
 }
 
-.Player2Container {
-  left: 53%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-
 .Player2Goal {
   padding-left: 13px;
   padding-right: 13px;
@@ -189,34 +155,6 @@ body {
   z-index: 3;
   border-radius: 0 8px 0 0;
   white-space: nowrap;
-}
-
-.Player2Score {
-  width: 11px;
-  height: 42px;
-  background: transparent;
-  text-align: center;
-  transform: skewY(-4.5deg);
-  rotate: 4.5deg;
-  border-radius: 3px;
-  z-index: 5;
-  border: 1px solid #d91e36;
-  transition: all 0.5s ease-in-out;
-}
-
-.Player2Name {
-  position: absolute;
-  bottom: -100px !important; 
-  text-align: right;
-  left: 149px;
-  color: white;
-  text-transform: capitalize;
-  font-size: 64px;
-  z-index: 5;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 16ch;
 }
 
 .Player2Image {
@@ -279,6 +217,117 @@ body {
   overflow: hidden;
 }
 
+.PlayerScores {
+  display: flex;
+  position: absolute;
+  flex-direction: row;
+  height: 16.5%;
+  width: 88%;
+  bottom: 0;
+  font-family: 'industry-inc-stencil', sans-serif;
+}
+
+.Player1Container {
+  flex: auto;
+  align-self: flex-start;
+  max-width: 50%;
+  width: 50%;
+  max-height: 100%;
+  height: 100%;
+}
+
+.Player1Name {
+  background-color: rgb(229, 0, 60);
+  margin-right: 4px;
+  padding-left: 4px;
+  max-height: 72px;
+  height: 72px;
+  position: absolute;
+  display: grid;
+  bottom: 57px;
+  margin: 0px;
+  border-radius: 16px 0px 0px 16px;
+  text-align: center;
+  align-items: center;
+  justify-content: start;
+  right: 972px;
+  color: white;
+  text-transform: capitalize;
+  font-size: 48px;
+  z-index: 5;
+  white-space: nowrap;
+  overflow: clip;
+  text-overflow: ellipsis;
+  max-width: 18ch;
+  width: 20ch;
+}
+
+.Player1Score {
+  position: absolute;
+  display: flex;
+  top: 49px;
+  left: 716px;
+  width: 62px;
+  height: 72px; 
+  line-height: 100%;
+  background-color: rgb(178, 0, 38);
+  align-items: center;
+  justify-content: center;
+  border-radius: 0px 16px 16px 0px;
+  font-size: 48px;
+}
+
+.Player2Container {  
+  flex: auto;
+  align-self: flex-end;
+  max-width: 50%;
+  width: 50%;
+  max-height: 100%;
+  height: 100%;
+}
+
+.Player2Name {
+  background-color: rgb(0, 92, 255);
+  padding-left: 4px;
+  height: 72px;
+  max-height: 72px;
+  position: absolute;
+  display: grid;
+  bottom: 57px; 
+  text-align: center;
+  align-items: center;
+  justify-content: start !important;
+  left: 994px;
+  color: white;
+  text-transform: capitalize;
+  justify-content: center;
+  align-items: center;
+  margin: 0px;
+  font-size: 48px;
+  z-index: 5;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 18ch;
+  width: 20ch;
+  border-radius: 0px 16px 16px 0px;
+}
+
+.Player2Score {
+  position: absolute;
+  display: flex;
+  top: 49px;
+  left: 932px;
+  width: 62px;
+  height: 72px;
+  line-height:100%;
+  background-color: rgb(0, 53, 170);
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px 0px 0px 16px;
+  font-size: 48px;
+}
+
 #player1Video,
 #player2Video {
   width: 50%;
@@ -294,24 +343,10 @@ body {
 
 /* Score Bounds | FC, Combo, ACC */
 
-.PlayerBounds {
-  width: 1050px;
-  height: 172px;
-  max-height: 172px;
-  opacity: 1;
-  display: flex;
-  flex-shrink: 1;
-  justify-content: center;
-  align-items: center;
-  align-self: center;
-  gap: 43px;
-}
-
 .StatsContainer {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 8px;
   padding: 10px 20px;
 }
 
@@ -326,28 +361,32 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  text-align: right;
+  padding-left: 24px;
 }
 
 .TopRow2 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  text-align: left;
+  padding-right: 24px;
 }
 
 .FC {
-  font-size: 32px;
+  font-size: 38px;
   font-weight: 900;
   color: white;
 }
 
 .Combo {
-  font-size: 32px;
+  font-size: 38px;
   font-weight: 900;
   color: white;
 }
 
 .ACC {
-  font-size: 32px;
+  font-size: 38px;
   font-weight: 900;
   color: white;
 }
@@ -356,16 +395,44 @@ body {
   position: absolute;
   width: 24px;
   height: 24px;
-  transform: scale(3);
+  transform: scaleX(-1) scale(3.5);
   bottom: 100px;
 }
-/* TODO Specific Replay class maybe */
+
 .ReplayBlue {
-  left: 1035.5px;
+  left: 768.5px;
 }
 
 .ReplayRed {
-  left: 743.5px;
+  left: 1005.5px;
+}
+
+.ReplayScore {
+  position: absolute;
+  bottom: 115px;
+  font-size: 38px;
+  padding: 0px;
+  line-height: 100%;
+}
+
+.ReplayScore1 {
+  left: 606.5px;
+  padding-left: 2px;
+  padding-right: 2px;
+  padding-top: 2px;
+  border: 4px solid rgb(0, 83, 229);
+  color: rgb(0, 83, 229);
+  opacity: 0;
+}
+
+.ReplayScore2 {
+  left:1068.5px;
+  padding-left: 2px;
+  padding-right: 2px;
+  padding-top: 2px;
+  border: 4px solid rgb(229, 0, 60);
+  color: rgb(229, 0, 60);
+  opacity: 0;
 }
 /* Tug Of War */
 
@@ -403,14 +470,6 @@ body {
 
 /* Song Card */
 
-#PlayerScores {
-  position: absolute;
-  height: 17%;
-  width: 88%;
-  bottom: 0;
-  font-family: 'industry-inc-stencil', sans-serif;
-}
-
 .SongCard {
   background: url("/public/images/Songcards/Normal/ExpertBG.png");
 
@@ -420,95 +479,121 @@ body {
   max-width: 503px;
   opacity: 1;
   display: flex;
-  bottom: 20px;
-  right: 103px;
+  right: 44px;
+  position: relative;
+  border-radius: 9px;
 }
 
 .SongName {
   position: absolute;
-  top: 5px;
-  left: 23px;
-  font-size: 24.5px;
-  font-weight: bolder;
+  top: -10px;
+  left: 14px;
+  font-size: 20px;
+  font-weight: 500;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 75%; /* Adjust the width as needed */
+  max-width: 332px; /* Adjust the width as needed */
+  width: 332px;
 }
 
 .SongBox {
   display: flex;
   position: relative;
-  gap: 11px;
+  gap: 8px;
+  height: 100%;
+  max-width: 380px;
+  width: 380px;
 }
 
-.SongBoxBG {
-  position: absolute;
-  right: -65px;
-  background: url('https://eu.cdn.beatsaver.com/cfcdbd060aabc0673f4950506b5170ce59d963bc.jpg') 50% 50% / cover;
-  min-width: 128px;
-  min-height: 128px;
-  border-radius: 15px;
-  opacity: 1;
-  transition: all 0.5s ease;
-  transform: skewY(-4deg);
-  rotate: 4deg;
-}
+
 
 .SongInfoLeft {
-  margin-top: 44px;
-  margin-left: 25px;
-  font-size: 19px;
+  position: absolute;
+  top: 52px;
+  right: 144px;
+  font-size: 18px;
 }
 
 .SongMapper {
-  margin-bottom: 3px;
+  position: relative;
+  top: -8px;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 19ch;
+  max-width: 24ch;
   white-space: nowrap;
 }
 
 .UploadDate {
   position: relative;
-  top: -12px;
+  top: -26px;
   overflow: hidden;
-  text-overflow: " ";
-  max-width: 19ch;
+  text-overflow: ellipsis;
+  max-width: 24ch;
   white-space: nowrap;
 }
 
-.SongInfoRight {
+.SongInfoTop   {
   position: absolute;
-  top: 44px;
-  right: 125px;
+  top: 28px;
+  right: 322px;
   text-align: right;
-  font-size: 19px;
+  max-height: 18px;
+  font-size: 18px;
 }
 
 .SongArtist {
+  position: relative;
+  top: -6px;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 8ch;
+  max-width: 12ch;
   white-space: nowrap;
 }
 
 .SongLength {
   color: white;
-  font-size: 19px;
-  margin-top: -13px;
+  position: relative;
+  top: -46px;
+  right: -320px;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width:12ch;
+  max-width: 12ch;
   white-space: nowrap;
 }
 
 .DiffName {
+  font-size: 18px;
   position: absolute;
-  text-align: center;
-  right: 125px;
-  top: 105px;
-  z-index: 100;
+  top: 58px;
+  right: 2px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 12ch;
+  white-space: nowrap;
+}
+
+.MapKey {
+  font-size: 18px;
+  position: absolute;
+  top: 44px;
+  right: 2px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 6ch;
+  white-space: nowrap;
+} 
+/* TODO MAP KEY IN MapHandler.js */
+
+.SongBPM {
+  font-size: 18px;
+  position: absolute;
+  top: 66px;
+  right: 2px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 7ch;
+  white-space: nowrap;
 }
 
 .SongPosition {
@@ -519,6 +604,29 @@ body {
   z-index: 100;
   color:black;
   font-size: 300px;
+}
+.SongCover {
+  background: url('https://eu.cdn.beatsaver.com/cfcdbd060aabc0673f4950506b5170ce59d963bc.jpg') 50% 50% / cover;
+  max-width: 114px;
+  max-height: 114px;
+  width: 116px;
+  height: 116px;
+  position: relative;
+  bottom: -6px;
+  left: 380px;
+  border-radius: 14px;
+  flex-shrink: 0;
+}
+.SongBoxBG {
+  background: url("/public/images/Songcards/Normal/Expert.svg");
+  max-width: 116px;
+  max-height: 116px;
+  width: 116px;
+  height: 116px;
+  position: relative;
+  bottom: -4px;
+  left: 258px;
+  flex-shrink: 0;
 }
 
 #Player1SkipBase,
