--- a/src/App.css
+++ b/src/App.css
@@ -295,7 +295,6 @@ body {
   display: grid;
   bottom: 57px; 
   text-align: center;
-  align-items: center;
   justify-content: start !important;
   left: 994px;
   color: white;
@@ -391,6 +390,14 @@ body {
   color: white;
 }
 
+.Player1ACC {
+  padding-right: 4px;
+}
+
+.Player2ACC {
+  padding-left: 4px;
+}
+
 .Replay {
   position: absolute;
   width: 24px;
@@ -400,11 +407,11 @@ body {
 }
 
 .ReplayBlue {
-  left: 768.5px;
+  left: 744.5px;
 }
 
 .ReplayRed {
-  left: 1005.5px;
+  left: 1044.5px;
 }
 
 .ReplayScore {
@@ -416,7 +423,7 @@ body {
 }
 
 .ReplayScore1 {
-  left: 606.5px;
+  left: 596.5px;
   padding-left: 2px;
   padding-right: 2px;
   padding-top: 2px;
@@ -426,7 +433,7 @@ body {
 }
 
 .ReplayScore2 {
-  left:1068.5px;
+  left:1001.5px;
   padding-left: 2px;
   padding-right: 2px;
   padding-top: 2px;
@@ -583,7 +590,6 @@ body {
   max-width: 6ch;
   white-space: nowrap;
 } 
-/* TODO MAP KEY IN MapHandler.js */
 
 .SongBPM {
   font-size: 18px;
